small grammer edits to response

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -304,11 +304,11 @@ prediction and operational experience.
 
 {\bf Our Response:} {\color{blue} This optimization was used for design of 
 an experiment. There is not an alternative base line, i.e. this is the 
-``first such solution for the AWA''. They points have not been operationally measured yet.
-The following line was added to the abstract: 
+``first such solution for the AWA''. The points have not been operationally measured yet.
+The following line was added to the abstract to address this: 
 
-"Optimized solutions found by the framework were used to finish the design 
-of a two beam acceleration experiment."
+``Optimized solutions found by the framework were used to finish the design 
+of a two beam acceleration experiment.''
 }
 
 Section I, line 35: trade of -$>$ trade off
@@ -333,8 +333,7 @@ Material
 
 {\bf Our response: } {\color{blue} This section has been shortened. However we would like to 
 leave the existing description, in order to drive home the fact that the framework can be 
-easily extended with other optimization algorithms. Something that you can not find in most of the 
-existing codes.}
+easily extended with other optimization algorithms.}
 
 Section VI: 
 Code and input file details should be in Supplemental Material
@@ -342,7 +341,7 @@ Code and input file details should be in Supplemental Material
 Section V, subsection B:
 Code and input file details should be in Supplemental Material
 
-{\bf Our response:} {\color{blue} The code examples in sections VI-V has been removed from the updated manuscript. 
+{\bf Our response:} {\color{blue} The code examples in sections VI-V have been removed from the updated manuscript. 
 	A sentence and link to the repository have been provided. Interested parties can refer to the repository.}
 
 subsubsection 3:
